# rig

./: CMakeLists.txt  README.md  mod.json
include/: API.hpp  BoneNode.hpp  ModelLoader.hpp  SkeletonPlayer.hpp  Types.hpp
resources/: testArmglb.glb
src/: BoneNode.cpp  BoneNode.hpp  ModelLoader.cpp  ModelLoader.hpp  SkeletonPlayer.cpp  SkeletonPlayer.hpp  Types.cpp  Types.hpp  main.cpp
